--- a/beak1008/beak1008.vcxproj
+++ b/beak1008/beak1008.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{912714eb-0f90-4588-b692-9193d10b0d56}</ProjectGuid>
     <RootNamespace>beak1008</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>baek1008</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
