--- a/beak2675/beak2675.vcxproj
+++ b/beak2675/beak2675.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2b6fd4e0-26d9-4c23-9fa1-f876531cbf7d}</ProjectGuid>
-    <RootNamespace>baek9498</RootNamespace>
+    <ProjectGuid>{2a6a565d-2c41-44b1-9071-6ba535e33ebc}</ProjectGuid>
+    <RootNamespace>beak2675</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>baek9498</ProjectName>
+    <ProjectName>baek2675</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="b9498.c">
+    <ClCompile Include="b2675.c">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
     </ClCompile>
   </ItemGroup>
